# ODAMNet

./: .gitattributes  .readthedocs.yaml  CTD_functions.py  DD_netCreation.py  DOMINO_request.py  DOMINO_request_v1.py  LICENSE  NDEx_functions.py  README  README.md  README.rst  RWR_cytoscape.R  Request_Tests.py  WP_functions.py  customClick.py  main.py  mainScript.py  mainScript_click.py  mainScript_v2.py  methods_functions.py  multixrank  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
EnvironmentProject/: CTD_functions.py
EnvironmentProject.egg-info/: PKG-INFO  SOURCES.txt
TestDOMINO/OutputDOMINOResults/: DOMINO_D014801_activeModules.txt  DOMINO_D014807_activeModules.txt  DOMINO_inputGeneList_D014807.txt  Overlap_AM_1_D014801_withRDWP.csv  Overlap_AM_1_D014807_withRDWP.csv  Overlap_AM_2_D014801_withRDWP.csv  Overlap_AM_2_D014807_withRDWP.csv  Overlap_AM_3_D014801_withRDWP.csv  WP_RareDiseases_request.tsv
TestDOMINO/OutputDOMINOResults_old/: CTD_requestFiltered_D014801.tsv  CTD_requestFiltered_D014807.tsv  CTD_request_D014807.tsv  DOMINO_D014801_activeModules.txt  DOMINO_D014807_activeModules.txt  DOMINO_inputGeneList_D014801.txt  (+4 more)
docs/: trees.txt
examples/: CytoscapeSession.cys  README  TEST.sif  multiplex_1.tsv  multiplex_2.tsv
odamnet/: .odamnet.py.swp  odamnet.py
test/: .Rhistory  CTDFile_byNames_inputFile.txt  CTD_request.tsv  WP_request.tsv
tests/: Overlap_unittests_manySources_withRDWP.csv  Overlap_unittests_source1_withRDWP.csv  basic_tests.py
unittest/: REAME  unitTests.py
useCases/: AMI_visualisation.cys  RWR_visualisation.cys
(+759 files in other folders)
