[build-system]
requires = ['setuptools>=59.8.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'ODAMNet'
authors = [{name = "Morgane Térézol"}]
version = '1.0'
description = 'Study the link between environmental factors and rare disease'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = '>=3.9'
license = {file = 'LICENSE'}
keywords = [
	'rare diseases',
        'overlap',
        'WikiPathways',
        'chemicals',
        'pathways overlap',
        'pathways diffusion',
        'active module identification',
        'random walk with restart',
        'RWR',
        'AMI',
        'EJP-RD'
]
classifiers = [
	'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Environment :: Console'
]

[project.urls]
Source = 'https://github.com/MOohTus/ODAMNet'
Documentation = 'https://github.com/MOohTus/ODAMNet/blob/main/docs/build/html/index.html'

[project.scripts]
odamnet = 'odamnet.odamnet:main'
